# PasswordManager

./: .gitignore  CMakeLists.txt  README.md  aaa  authmanager.cpp  authmanager.h  general.qss  generalLight.qss  icondownloader.cpp  icondownloader.h  iconmanager.cpp  iconmanager.h  main.cpp  pm.sql  resources.qrc  style.qss  translation.qm  translation.ts  translation_ru.qm  translation_ru.ts  translations.qrc
common/: Note.h  appcontrol.cpp  appcontrol.h  clipboard.cpp  clipboard.h  consts.h  dotenv.cpp  dotenv.h  loadercontroller.cpp  loadercontroller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingscontroller.cpp  settingscontroller.h  settingsvalues.h
crypt/: cipher.cpp  cipher.h  passwordgenerator.cpp  passwordgenerator.h
dialogs/: authdialog.cpp  authdialog.h  authdialog.ui  loaderpasswords.cpp  loaderpasswords.h  loaderpasswords.ui  manageaccountdialog.cpp  manageaccountdialog.h  manageaccountdialog.ui  notecreatedialog.cpp  notecreatedialog.h  notecreatedialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
models/: notecontroller.cpp  notecontroller.h  notemodel.cpp  notemodel.h
net/: authmanager.cpp  authmanager.h  iconmanager.cpp  iconmanager.h  storagemanager.cpp  storagemanager.h
qml/: AppSettings.qml  AuthDialog.qml  InfoNote.qml  Main.qml  ManageAccount.qml  NoteCreator.qml  Notes.qml  PLoader.qml  PLoaderStorage.qml  PMenu.qml  PMenu.qml.autosave  PMenubar.qml  SettingsDialog.qml  Welcome.qml
qss/: generalDark.qss
translations/: translation.ts  translation_ru.ts
widgets/: infowidget.cpp  infowidget.h  infowidget.ui  noteswidget.cpp  noteswidget.h  noteswidget.ui  secretpasswidget.cpp  secretpasswidget.h  secretpasswidget.ui
